# Armagedon

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
armagedon/: __init__.py  __main__.py  cli.py
armagedon/config/: target.env
armagedon/core/: auto_privesc.py  bloodhound.py  database.py  domain_intel.py  engine.py  fingerprints.py  pipeline.py  recommender.py
armagedon/data/: armagedon.db
armagedon/docs/: testing_strategy_cve_2024_38077.md
armagedon/docs/PoC_Reports/: CVE-2024-38077_MadLicense.md  CVE-2024-43641_FFI_Registry_EoP.md
armagedon/modules/auxiliary/: bloodhound_analyzer.py  domain_attack.py  kerberos_attack.py  ldap_enum.py  password_spray.py  smb_enum.py
armagedon/modules/exploits/: cve_2024_21338_appid_privesc.py  cve_2024_26229_csc_lpe.py  cve_2024_26229_csc_privesc.py  cve_2024_26234_proxy_key_spoofing.py  cve_2024_26234_proxydriver_spoof.py  cve_2024_38077_madlicense_eop.py  cve_2024_43641_ffi_registry_eop.py  cve_2025_21217_kernel_type_confusion.py  cve_2025_21217_win_kernel_lpe.py  exploit_acl_abuse.py  exploit_adcs.py  exploit_ccache_to_shell.py  exploit_constrained_delegation.py  exploit_dcsync.py  exploit_golden_ticket.py  exploit_gpo_abuse.py  exploit_kerberos_coercion.py  exploit_ntlm_relay.py  exploit_rbcd.py  exploit_secretsdump_bypass.py  exploit_shadow_credentials.py  exploit_unconstrained_delegation.py  potato_attacks.py  zerologon.py  (+2 more)
armagedon/tests/: conftest.py  mock_rpc_server.py  test_cve_2024_38077.py
tests/: conftest.py  test_engine.py  test_metadata.py  test_pipeline.py  test_safety_gates.py
(+21 files in other folders)
