[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "armagedon"
version = "1.0.0"
description = "Advanced Windows Exploitation Framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Armagedon Team" },
]
requires-python = ">=3.11"
dependencies = [
    "impacket>=0.11.0",
    "rich>=13.7.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "dnspython>=2.6.0",
    "colorama>=0.4.6",
    "paramiko>=3.4.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "tabulate>=0.9.0",
    "prompt_toolkit>=3.0.0",
]
keywords = ["windows", "exploitation", "security", "rpc", "cve"]

[project.scripts]
armagedon = "armagedon.__main__:main"

[tool.pytest.ini_options]
timeout = 30

[tool.setuptools.packages.find]
include = ["armagedon*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.2.0",
]
full = [
    "asn1crypto>=1.5.1",
    "beautifulsoup4>=4.12.0",
    "ldap3>=2.9.1",
    "pwntools",
    "python-nmap>=0.7.1",
    "pysmb>=1.2.9",
    "msldap>=1.0.0",
    "pycryptodomex",
]
